--- a/src/styles.scss
+++ b/src/styles.scss
@@ -64,6 +64,7 @@ body {
   background-color: $WHITE;
   height: 95%;
   margin: 10px;
+  max-height: 600px;
 }
 
 .border-box {
